generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-arm64-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  name      String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  orders    Order[]
}

model Product {
  id             String           @id @default(uuid())
  name           String
  description    String
  price          Float
  imageUrl       String
  stock          Int
  rating         Float?
  reviewCount    Int              @default(0)
  features       String[]
  sizes          String[]
  colors         String[]
  modelInfo      String?
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt
  brandId        String
  categoryId     String
  brand          Brand            @relation(fields: [brandId], references: [id])
  category       Category         @relation(fields: [categoryId], references: [id])
  variants       ProductVariant[]
  orderItems     OrderItem[]
  paymentOptions PaymentOptions?
}

model ProductVariant {
  id        String   @id @default(uuid())
  productId String
  name      String
  price     Float
  stock     Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  product   Product  @relation(fields: [productId], references: [id])
}

model Order {
  id         String      @id @default(uuid())
  userId     String
  total      Float
  status     String
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  user       User        @relation(fields: [userId], references: [id])
  orderItems OrderItem[]
}

model OrderItem {
  id        String  @id @default(uuid())
  orderId   String
  productId String
  quantity  Int
  price     Float
  order     Order   @relation(fields: [orderId], references: [id])
  product   Product @relation(fields: [productId], references: [id])
}

model Brand {
  id        String    @id @default(uuid())
  name      String
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  products  Product[]
}

model Category {
  id        String    @id @default(uuid())
  name      String
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  products  Product[]
}

model PaymentOptions {
  id           String  @id @default(uuid())
  productId    String  @unique
  installments Int
  provider     String
  product      Product @relation(fields: [productId], references: [id])
}
