//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders Order [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  description String [not null]
  price Float [not null]
  imageUrl String [not null]
  stock Int [not null]
  rating Float
  reviewCount Int [not null, default: 0]
  features String[] [not null]
  sizes String[] [not null]
  colors String[] [not null]
  modelInfo String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  brandId String [not null]
  categoryId String [not null]
  brand Brand [not null]
  category Category [not null]
  variants ProductVariant [not null]
  orderItems OrderItem [not null]
  paymentOptions PaymentOptions
}

Table ProductVariant {
  id String [pk]
  productId String [not null]
  name String [not null]
  price Float [not null]
  stock Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
}

Table Order {
  id String [pk]
  userId String [not null]
  total Float [not null]
  status String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  orderItems OrderItem [not null]
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  price Float [not null]
  order Order [not null]
  product Product [not null]
}

Table Brand {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table PaymentOptions {
  id String [pk]
  productId String [unique, not null]
  installments Int [not null]
  provider String [not null]
  product Product [not null]
}

Ref: Product.brandId > Brand.id

Ref: Product.categoryId > Category.id

Ref: ProductVariant.productId > Product.id

Ref: Order.userId > User.id

Ref: OrderItem.orderId > Order.id

Ref: OrderItem.productId > Product.id

Ref: PaymentOptions.productId - Product.id